--- a/xorg_legacy.template
+++ b/xorg_legacy.template
@@ -13,6 +13,11 @@ Section "Device"
 EndSection
 
 Section "Screen"
+    Identifier "intel"
+    Device "intel"
+EndSection
+
+Section "Screen"
     Identifier "nvidia"
     Device "nvidia"
     # Uncomment this line if your computer has no display devices connected to
