--- a/debian/install.in
+++ b/debian/install.in
@@ -1,4 +1,6 @@
+##LIGHTDM_CONF_FILENAME# #LIGHTDM_CONF_DIR#
 prime-quirks #MISC_DIR#
 get-quirk-options /sbin
 prime-select /usr/bin
 prime-supported /usr/bin
+oem /usr/lib/ubiquity/dm-scripts
