Revert "90-nvidia.conf, debian/install.in: disable prime-switch"
This reverts commit d57b80eedcbe2c95c2e5dc297e3eb0a3b4b80f72.

--- a/debian/install.in
+++ b/debian/install.in
@@ -1,7 +1,7 @@
 #LIGHTDM_CONF_FILENAME# #LIGHTDM_CONF_DIR#
 prime-quirks #MISC_DIR#
 prime-offload /sbin
-#prime-switch /sbin
+prime-switch /sbin
 get-quirk-options /sbin
 prime-select /usr/bin
 prime-supported /usr/bin
