--- a/90-nvidia.conf
+++ b/90-nvidia.conf
@@ -3,4 +3,4 @@
 type=xlocal
 # Scripts to handle PRIME
 display-setup-script=/sbin/prime-offload
-#display-stopped-script=/sbin/prime-switch
+display-stopped-script=/sbin/prime-switch
