Remove obsolete udev rules during postinst upgrade
This commit aims to fix the problem in nvidia-prime 0.8.15 where
/lib/udev/rules.d/50-pm-nvidia.rules was left behind after a system
upgrade 20.04 LTS (focal) to 20.10 (groovy), and yet prime-select
had lost the ability to remove the udev rules file,
leaving the end user with no means to re-enable his/her Nvidia GPU.

--- a/debian/rules
+++ b/debian/rules
@@ -40,6 +40,7 @@ regen-from-templates:
 	for i in $(CURDIR)/debian/install \
 	     $(CURDIR)/debian/dirs \
 		 $(CURDIR)/debian/preinst \
+		 $(CURDIR)/debian/postinst \
 		 $(CURDIR)/debian/postrm; do \
 		sed -e 's|#XORG_CONF#|$(XORG_CONF)|g' \
 			-e 's|#XORG_TEMPLATE#|$(XORG_TEMPLATE)|g' \
